--- a/public/site/css/style.css
+++ b/public/site/css/style.css
@@ -370,7 +370,8 @@ h3.agileinfo_sign  {
     outline:none;
 }
 nav.navbar.navbar-default {
-    background: none;
+    /*background: none;*/
+        background: rgba(245, 244, 244, 0.41);
        padding: 0.5em 2em;
 }
 .navbar-right {
