--- a/public/assets/global/coin-slider/coin-slider-styles.css
+++ b/public/assets/global/coin-slider/coin-slider-styles.css
@@ -1,32 +1,1 @@
-/*
-	Coin Slider jQuery plugin CSS styles
-	http://workshop.rs/projects/coin-slider
-*/
-
-
-.coin-slider { overflow: hidden; zoom: 1; position: relative; }
-.coin-slider a{ text-decoration: none; outline: none; border: none; }
-
-.cs-buttons { font-size: 0px; padding: 10px; float: left; }
-.cs-buttons a { margin-left: 5px; height: 10px; width: 10px; float: left; border: 1px solid #B8C4CF; color: #B8C4CF; text-indent: -1000px; }
-.cs-active { background-color: #B8C4CF; color: #FFFFFF; }
-
-.cs-title { width: 545px; padding: 10px; background-color: #000000; color: #FFFFFF; }
-
-.cs-prev, 
-.cs-next { background-color: #000000; color: #FFFFFF; padding: 0px 10px; }
-
-@media only screen and (min-width: 768px) {
-    /* tablets and desktop */
-    .coin-slider{
-        
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    /* phones */
-}
-
-@media only screen and (max-width: 767px) and (orientation: portrait) {
-    /* portrait phones */
-}
+.coin-slider{overflow:hidden;zoom:1;position:relative}.coin-slider a{text-decoration:none;outline:0;border:none}.cs-buttons{font-size:0;padding:10px;float:left}.cs-buttons a{margin-left:5px;height:10px;width:10px;float:left;border:1px solid #B8C4CF;color:#B8C4CF;text-indent:-1000px}.cs-active{background-color:#B8C4CF;color:#FFF}.cs-next,.cs-prev,.cs-title{background-color:#000;color:#FFF}.cs-title{width:545px;padding:10px}.cs-next,.cs-prev{padding:0 10px}
